test/conformance/chainsaw/validating-policies/autogen/should-autogen-with-namespace-selector/check-autogen.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: ValidatingPolicy
metadata:
  name: disallow-privilege-escalation-ns
status:
  autogen:
    configs:
      defaults:
        spec:
          matchConstraints:
            namespaceSelector:
              matchLabels:
                kubernetes.io/namespace-type: product
            resourceRules:
            - apiGroups:
              - apps
              apiVersions:
              - v1
              operations:
              - CREATE
              - UPDATE
              resources:
              - daemonsets
              - deployments
              - replicasets
              - statefulsets
            - apiGroups:
              - batch
              apiVersions:
              - v1
              operations:
              - CREATE
              - UPDATE
              resources:
              - jobs
          validations:
          - expression: object.spec.template.spec.containers.all(container, has(container.securityContext)
              && has(container.securityContext.allowPrivilegeEscalation) && container.securityContext.allowPrivilegeEscalation
              == false)
            message: Privilege escalation is disallowed. The field spec.containers[*].securityContext.allowPrivilegeEscalation
              must be set to `false`.
      cronjobs:
        spec:
          matchConstraints:
            namespaceSelector:
              matchLabels:
                kubernetes.io/namespace-type: product
            resourceRules:
            - apiGroups:
              - batch
              apiVersions:
              - v1
              operations:
              - CREATE
              - UPDATE
              resources:
              - cronjobs
          validations:
          - expression: object.spec.jobTemplate.spec.template.spec.containers.all(container,
              has(container.securityContext) && has(container.securityContext.allowPrivilegeEscalation)
              && container.securityContext.allowPrivilegeEscalation == false)
            message: Privilege escalation is disallowed. The field spec.containers[*].securityContext.allowPrivilegeEscalation
              must be set to `false`.
