test/conformance/chainsaw/validating-policies/autogen/should-autogen-with-namespace-selector/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: should-autogen-with-namespace-selector
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-validating-policy-ready
    use:
      template: ../../../_step-templates/validating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: disallow-privilege-escalation-ns
  - name: check autogen policy
    try:
    - assert:
        file: check-autogen.yaml
